Started working on the manager api
