# live-chat-swagger/src/main/java/com/github/tunashred/dto/manager/FileTopicParams.java
@@ -1,0 +1,14 @@
+package com.github.tunashred.dto.manager;
+
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.experimental.FieldDefaults;
+
+@Data
+@AllArgsConstructor
+@FieldDefaults(level = AccessLevel.PRIVATE)
+public class FileTopicParams {
+    String filePath;
+    String topic;
+}
